[mod] #13 팩토리 메서드 패턴 사용